[workspace]
members = ["apis", "chain-spec-generator", "common", "runtime/kreivo"]
resolver = "2"

[profile.release]
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.test]
debug = 0

[workspace.package]
authors = ['Virto Team <contact@virto.team>']
edition = "2021"
homepage = 'https://github.com/virto-network/virto-node'
license = "GPL-3.0-only"
repository = 'https://github.com/virto-network/virto-node'

[workspace.dependencies]
# common
anyhow = { version = "1.0.98", default-features = false }
tempfile = { version = "3.19.1" }
toml = { version = "0.8.22" }
twox-hash = { version = "2.1.0", default-features = false }
num_enum = { version = "0.7.3", default-features = false }

clap = { version = "4.5.3" }
hex-literal = { version = "1.0.0" }
log = { version = "0.4.22" }
parity-scale-codec = { version = "3.6.4", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
  "derive",
] }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_json = { version = "1.0.121", default-features = false }
smallvec = "1.11"
schnorrkel = { version = "0.11.4", default-features = false }

# Local dependencies
kreivo-runtime = { path = "runtime/kreivo" }

# Virto Pallets
kreivo-apis = { default-features = false, path = "apis" }
virto-common = { default-features = false, path = "common" }

pallet-communities-manager = { default-features = false, path = "pallets/communities-manager" }
pallet-contracts-store = { default-features = false, path = "pallets/contracts-store" }

runtime-constants = { default-features = false, path = "runtime/runtime-constants" }
runtime-common = { default-features = false, path = "runtime/common" }

# Frame Contrib
frame-contrib-traits = { git = "https://github.com/virto-network/frame-contrib", default-features = false }
mock-helpers = { git = "https://github.com/virto-network/frame-contrib", default-features = false }

pallet-communities = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-communities" }
pallet-gas-transaction-payment = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-gas-transaction-payment" }
pallet-listings = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-listings" }
pallet-orders = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-orders" }
pallet-payments = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-payments" }
pallet-pass = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-pass" }
pallet-referenda-tracks = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-referenda-tracks" }
pallet-black-hole = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-black-hole" }

# Pass Authenticators
pass-webauthn = { git = "https://github.com/virto-network/pass-authenticators", default-features = false, package = "pass-authenticators-webauthn" }
pass-substrate-keys = { git = "https://github.com/virto-network/pass-authenticators", default-features = false, package = "pass-authenticators-substrate-keys" }

# Substrate std
pallet-transaction-payment-rpc = { version = "44.0.0" }
sc-chain-spec = { version = "44.0.0" }
sp-consensus = { version = "0.43.0" }

# Substrate non-std
frame-benchmarking = { version = "41.0.0", default-features = false }
sp-api = { version = "37.0.0", default-features = false }
sp-block-builder = { version = "37.0.0", default-features = false }
sp-consensus-aura = { version = "0.43.0", default-features = false }
sp-core = { version = "37.0.0", default-features = false }
sp-io = { version = "41.0.1", default-features = false }
sp-offchain = { version = "37.0.0", default-features = false }
sp-session = { version = "39.0.0", default-features = false }
sp-transaction-pool = { version = "37.0.0", default-features = false }

# Substrate Runtime
sp-genesis-builder = { version = "0.18.0", default-features = false }
sp-inherents = { version = "37.0.0", default-features = false }
sp-runtime = { version = "42.0.0", default-features = false }
sp-version = { version = "40.0.0", default-features = false }
sp-weights = { version = "32.0.0", default-features = false }

# Build Dependencies
substrate-wasm-builder = { version = "27.0.0" }
parity-wasm = { version = "0.45.0" }

## FRAME Dependencies
frame-executive = { version = "41.0.0", default-features = false }
frame-support = { version = "41.0.0", default-features = false }
frame-system = { version = "41.0.0", default-features = false }
frame-system-benchmarking = { version = "41.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "37.0.0", default-features = false }
frame-try-runtime = { version = "0.47.0", default-features = false }

## FRAME Pallets
pallet-asset-tx-payment = { version = "41.0.0", default-features = false }
pallet-assets = { version = "43.0.0", default-features = false }
pallet-assets-freezer = { version = "0.8.0", default-features = false }
pallet-assets-holder = { version = "0.3.0", default-features = false }
pallet-aura = { version = "40.0.0", default-features = false }
pallet-authorship = { version = "41.0.0", default-features = false }
pallet-balances = { version = "42.0.0", default-features = false }
pallet-contracts = { version = "41.0.0", default-features = false }
pallet-contracts-fixtures = { path = "pallets/contracts-store/fixtures", default-features = false }
pallet-multisig = { version = "41.0.0", default-features = false }
pallet-nfts = { version = "35.0.0", default-features = false }
pallet-preimage = { version = "41.0.0", default-features = false }
pallet-proxy = { version = "41.0.0", default-features = false }
pallet-ranked-collective = { version = "41.0.0", default-features = false }
pallet-referenda = { version = "41.0.0", default-features = false }
pallet-scheduler = { version = "42.0.0", default-features = false }
pallet-session = { version = "41.0.0", default-features = false }
pallet-skip-feeless-payment = { version = "16.0.0", default-features = false }
pallet-sudo = { version = "41.0.0", default-features = false }
pallet-timestamp = { version = "40.0.0", default-features = false }
pallet-transaction-payment = { version = "41.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "41.0.0", default-features = false }
pallet-treasury = { version = "40.0.0", default-features = false }
pallet-utility = { version = "41.0.0", default-features = false }
pallet-vesting = { version = "41.0.0", default-features = false }

# Cumulus client dependencies
cumulus-primitives-aura = { version = "0.18.0", default-features = false }

# Cumulus runtime dependencies
assets-common = { version = "0.22.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.21.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.21.0", default-features = false }
cumulus-pallet-session-benchmarking = { version = "22.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.20.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.21.0", default-features = false }
cumulus-primitives-core = { version = "0.19.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.20.0", default-features = false }
cumulus-primitives-utility = { version = "0.21.0", default-features = false }
pallet-collator-selection = { version = "22.0.0", default-features = false }
pallet-message-queue = { version = "44.0.0", default-features = false }
parachain-info = { version = "0.21.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "22.0.0", default-features = false }

# Polkadot
polkadot-primitives = { version = "19.0.0", default-features = false }

# Polkadot Dependencies
pallet-xcm = { version = "20.1.0", default-features = false }
pallet-xcm-benchmarks = { version = "21.0.0", default-features = false }
polkadot-core-primitives = { version = "18.0.0", default-features = false }
polkadot-parachain-primitives = { version = "17.0.0", default-features = false }
polkadot-runtime-common = { version = "20.0.0", default-features = false }
xcm = { version = "17.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "21.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "20.0.0", package = "staging-xcm-executor", default-features = false }

# ink!
ink = { version = "5.1.1", default-features = false }
ink_env = { version = "5.1.1", default-features = false }

[workspace.lints.clippy]
