[workspace]
members = ["apis", "chain-spec-generator", "common", "precompiles/foo", "precompiles/payments", "runtime/kreivo"]
resolver = "2"

[profile.release]
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.test]
debug = 0

[workspace.package]
authors = ['Virto Team <contact@virto.team>']
edition = "2021"
homepage = 'https://github.com/virto-network/kreivo'
license = "GPL-3.0-only"
repository = 'https://github.com/virto-network/kreivo'

[workspace.dependencies]
# common
anyhow = { version = "1.0.100", default-features = false }
tempfile = { version = "3.23.0" }
toml = { version = "0.9.8" }
twox-hash = { version = "2.1.2", default-features = false }
num_enum = { version = "0.7.3", default-features = false }

clap = { version = "4.5.48" }
hex-literal = { version = "1.0.0" }
log = { version = "0.4.28" }
parity-scale-codec = { version = "3.6.4", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
  "derive",
] }
rand_core = { version = "0.6.4", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
smallvec = "1.11"
schnorrkel = { version = "0.11.4", default-features = false }

# Substrate libs
ethereum-standards = {version = "0.1.2" }

# Local dependencies
kreivo-runtime = { path = "runtime/kreivo" }

# Virto Pallets
kreivo-apis = { default-features = false, path = "apis" }
virto-common = { default-features = false, path = "common" }

pallet-communities-manager = { default-features = false, path = "pallets/communities-manager" }
pallet-contracts-store = { default-features = false, path = "pallets/contracts-store" }

runtime-constants = { default-features = false, path = "runtime/runtime-constants" }
runtime-common = { default-features = false, path = "runtime/common" }

# Frame Contrib
frame-contrib-traits = { git = "https://github.com/virto-network/frame-contrib", default-features = false }
mock-helpers = { git = "https://github.com/virto-network/frame-contrib", default-features = false }

pallet-communities = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-communities" }
pallet-gas-transaction-payment = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-gas-transaction-payment" }
pallet-listings = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-listings" }
pallet-orders = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-orders" }
pallet-payments = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-payments" }
pallet-pass = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-pass" }
pallet-referenda-tracks = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-referenda-tracks" }
pallet-black-hole = { git = "https://github.com/virto-network/frame-contrib", default-features = false, package = "fc-pallet-black-hole" }

# Pass Authenticators
pass-webauthn = { git = "https://github.com/virto-network/pass-authenticators", default-features = false, package = "pass-authenticators-webauthn" }
pass-substrate-keys = { git = "https://github.com/virto-network/pass-authenticators", default-features = false, package = "pass-authenticators-substrate-keys" }

# Precompiles
pallet-foo-precompiles = { default-features = false, path = "precompiles/foo" }
pallet-payments-precompiles = { default-features = false, path = "precompiles/payments" }

# Substrate std
pallet-transaction-payment-rpc = { version = "46.0.0" }
sc-chain-spec = { version = "46.0.0" }
sp-consensus = { version = "0.45.0" }

# Substrate non-std
frame-benchmarking = { version = "43.0.0", default-features = false }
sp-api = { version = "39.0.0", default-features = false }
sp-block-builder = { version = "39.0.0", default-features = false }
sp-consensus-aura = { version = "0.45.0", default-features = false }
sp-core = { version = "38.1.0", default-features = false }
sp-io = { version = "43.0.0", default-features = false }
sp-offchain = { version = "39.0.0", default-features = false }
sp-session = { version = "41.0.0", default-features = false }
sp-transaction-pool = { version = "39.0.0", default-features = false }

# Substrate Runtime
sp-genesis-builder = { version = "0.20.0", default-features = false }
sp-inherents = { version = "39.0.0", default-features = false }
sp-runtime = { version = "44.0.0", default-features = false }
sp-version = { version = "42.0.0", default-features = false }
sp-weights = { version = "33.1.0", default-features = false }

# Build Dependencies
substrate-wasm-builder = { version = "29.0.0" }
parity-wasm = { version = "0.45.0" }

## FRAME Dependencies
frame-executive = { version = "43.0.1", default-features = false }
frame-support = { version = "43.0.0", default-features = false }
frame-system = { version = "43.0.1", default-features = false }
frame-system-benchmarking = { version = "43.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "39.0.0", default-features = false }
frame-try-runtime = { version = "0.49.0", default-features = false }

## FRAME Pallets
pallet-asset-tx-payment = { version = "43.0.0", default-features = false }
pallet-assets = { version = "46.1.0", default-features = false }
pallet-assets-freezer = { version = "0.11.0", default-features = false }
pallet-assets-holder = { version = "0.6.0", default-features = false }
pallet-aura = { version = "42.0.0", default-features = false }
pallet-authorship = { version = "43.0.0", default-features = false }
pallet-balances = { version = "44.0.0", default-features = false }
pallet-contracts = { version = "43.0.0", default-features = false }
pallet-contracts-fixtures = { path = "pallets/contracts-store/fixtures", default-features = false }
pallet-multisig = { version = "43.0.0", default-features = false }
pallet-nfts = { version = "37.0.0", default-features = false }
pallet-preimage = { version = "43.0.0", default-features = false }
pallet-proxy = { version = "43.1.0", default-features = false }
pallet-ranked-collective = { version = "43.0.1", default-features = false }
pallet-referenda = { version = "43.0.0", default-features = false }
pallet-scheduler = { version = "44.0.0", default-features = false }
pallet-session = { version = "43.0.0", default-features = false }
pallet-skip-feeless-payment = { version = "18.0.0", default-features = false }
pallet-sudo = { version = "43.0.0", default-features = false }
pallet-timestamp = { version = "42.0.0", default-features = false }
pallet-transaction-payment = { version = "43.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "43.0.0", default-features = false }
pallet-treasury = { version = "42.0.0", default-features = false }
pallet-utility = { version = "43.0.0", default-features = false }
pallet-vesting = { version = "43.0.0", default-features = false }
pallet-revive = { version = "0.10.1", default-features = false }

# FRAME Pallets Precompiles
pallet-assets-precompiles = { version = "0.2.0", default-features = false }

# Cumulus client dependencies
cumulus-primitives-aura = { version = "0.20.0", default-features = false }

# Cumulus runtime dependencies
assets-common = { version = "0.25.0", default-features = false }
cumulus-pallet-aura-ext = { version = "0.23.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.23.1", default-features = false }
cumulus-pallet-session-benchmarking = { version = "24.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.22.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.23.0", default-features = false }
cumulus-primitives-core = { version = "0.21.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.22.0", default-features = false }
cumulus-primitives-utility = { version = "0.23.0", default-features = false }
pallet-collator-selection = { version = "24.0.0", default-features = false }
pallet-message-queue = { version = "46.0.0", default-features = false }
parachain-info = { version = "0.23.0", package = "staging-parachain-info", default-features = false }
parachains-common = { version = "25.0.0", default-features = false }

# Polkadot
polkadot-primitives = { version = "21.0.0", default-features = false }

# Polkadot Dependencies
pallet-xcm = { version = "23.0.0", default-features = false }
pallet-xcm-benchmarks = { version = "23.0.0", default-features = false }
polkadot-core-primitives = { version = "20.0.0", default-features = false }
polkadot-parachain-primitives = { version = "19.0.0", default-features = false }
polkadot-runtime-common = { version = "22.0.0", default-features = false }
xcm = { version = "19.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "23.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "22.0.0", package = "staging-xcm-executor", default-features = false }

# ink!
ink = { version = "5.1.1", default-features = false }
ink_env = { version = "5.1.1", default-features = false }

[workspace.lints.clippy]
