[package]
name = "kreivo-apis"
description = "A set of APIs to connect Smart Contract creators with the Kreivo runtime."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
frame-support = { workspace = true }

# Runtime
frame-system = { workspace = true, optional = true }
pallet-contracts = { workspace = true, optional = true }
log = { workspace = true, optional = true }


[features]
default = ["std", "runtime", "contract"]
std = [
    "frame-support/std",
    "frame-system/std",
    "log?/std",
    "pallet-contracts?/std",
]
runtime = [
    "dep:frame-system",
    "dep:log",
    "dep:pallet-contracts",
]
contract = []
