[package]
authors.workspace = true
description = "Chain Spec Generator for Kreivo"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "chain-spec-generator"
repository.workspace = true
version = "0.16.2"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
kreivo-runtime = { workspace = true, default-features = true }
sc-chain-spec.workspace = true

[features]
runtime-benchmarks = ["kreivo-runtime/runtime-benchmarks"]
paseo = ["kreivo-runtime/paseo"]
