[package]
authors.workspace = true
description = "This pallet helps with all the necesary steps to publish and acquire 'apps' (contracts) from publishers."
edition.workspace = true
license.workspace = true
homepage.workspace = true
name = "pallet-contracts-store"
repository.workspace = true
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-contrib-traits.workspace = true
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-contracts.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime.workspace = true

[dev-dependencies]
mock-helpers = { workspace = true, features = ["pallet-assets", "pallet-balances"] }
pallet-assets.workspace = true
pallet-balances.workspace = true
pallet-contracts-fixtures.workspace = true
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
	"frame-benchmarking/std",
	"frame-contrib-traits/std",
	"frame-support/std",
	"frame-system/std",
	"mock-helpers/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-contrib-traits/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-contracts/try-runtime",
	"sp-runtime/try-runtime"
]
