[package]
name = "pallet-foo-precompiles"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Provides precompiles for this `foo pallet`"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support.workspace = true
frame-system.workspace = true
pallet-balances = { workspace = true, default-features = false }
pallet-revive.workspace = true
sp-core = { workspace = true, default-features = false }
scale-info = { workspace = true }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[dev-dependencies]
frame-support.workspace = true
frame-system.workspace = true
pallet-balances = { workspace = true, default-features = false }
pallet-revive.workspace = true
sp-core = { workspace = true, default-features = false }
scale-info = { workspace = true }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
zombienet = []
std = [
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-revive/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std"
]

runtime-benchmarks = [
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/runtime-benchmarks",
    "pallet-revive/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-revive/try-runtime",
    "sp-runtime/try-runtime",
]