[package]
name = "pallet-payments-precompile"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Provides precompiles for `pallet-payments`"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support.workspace = true
pallet-assets.workspace = true
pallet-revive.workspace = true
pallet-payments.workspace = true

[dev-dependencies]
codec = { workspace = true }
frame-system = { workspace = true, default-features = false }
scale-info = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-payments/std",
    "pallet-revive/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-payments/runtime-benchmarks",
    "pallet-revive/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-payments/try-runtime",
    "pallet-revive/try-runtime",
    "sp-runtime/try-runtime",
]