[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
name = "runtime-constants"
repository.workspace = true
version = "1.0.0"

[dependencies]
smallvec = "1.8.0"
frame-support.workspace = true
parachains-common.workspace = true
polkadot-primitives.workspace = true
polkadot-runtime-common.workspace = true
sp-runtime.workspace = true
sp-weights.workspace = true
sp-core.workspace = true
xcm.workspace = true
xcm-builder.workspace = true

[features]
default = ["std"]
paseo = []
zombienet = []
try-runtime = [
	"frame-support/try-runtime",
	"parachains-common/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime"
]
std = [
  "frame-support/std",
  "polkadot-primitives/std",
  "polkadot-runtime-common/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-weights/std",
  "xcm-builder/std",
  "parachains-common/std",
  "xcm/std",
]
